# json-schema-for-humans

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  README.md.  _sidebar.md  config_schema.json  index.html  package-lock.json  package.json  pyproject.toml  renovate.json5  requirements-3.6.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: publish_to_pypi.yml  pythonpackage.yml  semantic-release.yaml
docs/: Configuration.md  Examples.md  _sidebar.md  cases_description.yaml  generate_examples.py  index.html  index.md
docs/_data/: examples.yaml
docs/_includes/: README.md
docs/_includes/examples/: additional_properties.json  basic.json  geo.json  multiple_types.json  references.json  string_format.json  with_definitions.json
docs/assets/: config_schema.html  config_schema.md
docs/assets/examples/: array.html  array_advanced.html  basic.html  combining_not.html  combining_oneOf.html  deprecated.html  geo.html  multiple_types.html  pattern_properties.html  references.html  schema_doc.css  schema_doc.min.js  string_format.html  with_default.html  with_definitions.html  with_descriptions.html  with_examples.html
docs/assets/examples_flat/: additional_properties.html  anyOf_option_names.html  array.html  array_additionalItems.html  array_advanced.html  basic.html  break_on_newline.html  circular.html  combining_not.html  combining_oneOf.html  conditional_subschema.html  conditional_subschema_no_else.html  defaults.html  deprecated.html  description_from_ref.html  description_markdown.html  description_with_ref.html  geo.html  html_in_patterns.html  long_description.html  multiple_types.html  pattern_properties.html  pattern_properties_html_id.html  recursive.html  recursive_array.html  recursive_parent_in_definition.html  recursive_two_files.html  recursive_two_files2.html  ref_merge.html  references.html  references_url.html  references_url_two_levels.html  references_url_yaml.html  single_element_allOf.html  top_level_array.html  top_level_combining.html  with_default.html  with_definitions.html  with_descriptions.html  with_examples.html  (+2 more)
docs/assets/examples_js/: additional_properties.html  anyOf_option_names.html  array.html  array_additionalItems.html  array_advanced.html  basic.html  break_on_newline.html  circular.html  combining_not.html  combining_oneOf.html  conditional_subschema.html  conditional_subschema_no_else.html  defaults.html  deprecated.html  description_from_ref.html  description_markdown.html  description_with_ref.html  geo.html  html_in_patterns.html  long_description.html  multiple_types.html  pattern_properties.html  pattern_properties_html_id.html  recursive.html  recursive_array.html  recursive_parent_in_definition.html  recursive_two_files.html  recursive_two_files2.html  ref_merge.html  references.html  references_url.html  references_url_two_levels.html  references_url_yaml.html  single_element_allOf.html  top_level_array.html  top_level_combining.html  with_default.html  with_definitions.html  with_descriptions.html  with_examples.html  (+2 more)
docs/assets/examples_md/: additional_properties.md  anyOf_option_names.md  array.md  array_additionalItems.md  array_advanced.md  basic.md  break_on_newline.md  circular.md  combining_not.md  combining_oneOf.md  conditional_subschema.md  conditional_subschema_no_else.md  defaults.md  deprecated.md  description_from_ref.md  description_markdown.md  description_with_ref.md  geo.md  html_in_patterns.md  long_description.md  multiple_types.md  pattern_properties.md  pattern_properties_html_id.md  recursive.md  recursive_array.md  recursive_parent_in_definition.md  recursive_two_files.md  recursive_two_files2.md  ref_merge.md  references.md  references_url.md  references_url_two_levels.md  references_url_yaml.md  single_element_allOf.md  top_level_array.md  top_level_combining.md  with_default.md  with_definitions.md  with_descriptions.md  with_examples.md  (+2 more)
docs/examples/: config_schema.html  config_schema.md
docs/examples/cases/: additional_properties.json  anyOf_option_names.json  array.json  array_additionalItems.json  array_advanced.json  array_example.json  array_items_draft_2020_12.json  basic.json  break_on_newline.json  broken_ref.json  combining_oneOf.json  complex_const.json  deprecated.json  description_with_ref.json  empty_property_name.json  enumofnone.json  multiple_types.json  (+30 more)
json_schema_for_humans/: cli.py  const.py  default_file.py  generate.py  generation_configuration.py  intermediate_representation.py  jinja_filters.py  jinja_write_file_extension.py  language_types.py  md_template.py  schema_doc.css  schema_doc.js  schema_doc.min.js  schema_node.py  template_renderer.py  templating_utils.py
json_schema_for_humans/schema/: intermediate_representation.py  keyword.py  schema_importer.py  schema_keyword.py  schema_node.py  schema_to_render.py
json_schema_for_humans/templates/: badge_type.html  base.html  content.html  macro_restriction.html  schema_doc.template.html  section_array.html  section_conditional_subschema.html  section_description.html  section_enum.html  section_examples.html  section_not.html  section_properties.html  section_undocumented_required_properties.html  subsection.html  tabbed_section.html
tests/: __init__.py  cli_test.py  generate_expected_md.py  generate_recursive_test.py  generate_test.py  generation_configuration_test.py  html_schema_doc_asserts.py  interface_test.py  intermediate_test.py  md_utils_asserts.py  test_md_generate.py  test_utils.py
tests/cases/: additional_properties.json  array.json  array_additionalItems.json  circular.json  defaults.json  deprecated.json  description_from_ref.json  description_markdown.json  multiple_types.json  pattern_properties.json  ref_merge.json  references.json  references_url.json  single_element_allOf.json  top_level_array.json  with_default.json  with_descriptions.json  with_examples.json  with_keywords.json  with_special_chars.json  yaml.yaml
tests/schema/: intermediate_test.py  schema_importer_test.py
(+700 files in other folders)
