[tool.poetry]
name = "json-schema-for-humans"
version = "1.0.3"
description = "Generate static HTML documentation from JSON schemas"
authors = ["Denis Blanchette <tools@coveo.com>", "AbdulRahman Al Hamali <tools@coveo.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/json-schema-for-humans"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Topic :: Documentation"
]
include = [
    "json_schema_for_humans/*.py",
    "json_schema_for_humans/schema/*.py",
    "json_schema_for_humans/templates/**"
]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
dataclasses-json = "^0.6.7"
htmlmin = "^0.1.12"
Jinja2 = ">3"
markdown2 = "^2.5.0"
Pygments = "^2.18.0"
pytz = "*"
PyYAML = "^6.0.2"
requests = "^2.32.3"
MarkupSafe = "^2.1.5"


[tool.poetry.scripts]
generate-schema-doc = "json_schema_for_humans.cli:main"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.10.0"
black = "^24.8.0"
pytest = "^8.3.2"
mypy = "^1.11.2"
types-requests = "^2.32.0"
types-pygments = "^2.18.0.20240506"
types-beautifulsoup4 = "^4.12.0.20240511"
types-pyyaml = "^6.0.12.20240808"
types-pytz = "^2024.1.0.20240417"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py311"]
include = "(json_schema_for_humans|tests).*\\.pyi?$|setup.py"
exclude = """
(
  /( \
     \\.eggs \
    |\\.git \
    |\\.hg \
    |\\.mypy_cache \
    |\\.pytest_cache \
    |py\\d+_venv \
    |\\.tox \
    |\\.venv \
    |_build \
    |buck-out \
    |build \
    |dist \
    |html-coverage \
    |docs \
    |target
  )/
)
"""
