[metadata]
name = json-schema-for-humans
summary = Generate static HTML documentation from JSON schemas
description-file = README.md
description-content-type = text/markdown
author = Denis Blanchette, AbdulRahman Al Hamali
author-email = tools@coveo.com
license = Apache Software License
url = https://github.com/coveooss/json-schema-for-humans
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Documentation
python_requires = >=3.6

[files]
packages =
    json_schema_for_humans

[entry_points]
console_scripts =
    generate-schema-doc = json_schema_for_humans.generate:main

[pbr]
skip_changelog = True